Include vars_files for Nginx HTTPS configuration
Added vars_files to include secrets for Nginx configuration.

--- a/ansible/playbooks/nginx.yml
+++ b/ansible/playbooks/nginx.yml
@@ -1,6 +1,10 @@
 - name: Apply Nginx config with HTTPS
   hosts: app
   become: true
+
+  vars_files:
+    - /home/gh/ansible_secrets.yml
+    
   roles:
     - role: nginx
       vars:
