--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -28,3 +28,10 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
+bootJar {
+    archiveFileName = "app.jar"
+}
+
+jar {
+    enabled = false
+}
