--- a/.github/workflows/ci-cd-backend.yml
+++ b/.github/workflows/ci-cd-backend.yml
@@ -47,7 +47,7 @@ jobs:
     name: Deploy to production (java backend)
     runs-on: ubuntu-latest
     needs: [ ci ]
-    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+    if: ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') || github.event_name == 'workflow_dispatch' }}
     permissions:
       contents: read
     environment:
