--- a/.github/workflows/ci-cd-backend.yml
+++ b/.github/workflows/ci-cd-backend.yml
@@ -54,9 +54,9 @@ jobs:
       name: production
       url: https://growerhub.ru/health
     env:
-      DEPLOY_HOST: ${{ vars.DEPLOY_HOST }}
-      DEPLOY_PORT: ${{ vars.DEPLOY_PORT || '22' }}
-      DEPLOY_USER: ${{ vars.DEPLOY_USER }}
+      SSH_HOST: growerhub.ru
+      SSH_PORT: "6733"
+      SSH_USER: watering-admin
       DEPLOY_DIR: /opt/growerhub/java-backend
     steps:
       - name: Checkout
@@ -66,33 +66,33 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-          if [ -z "${DEPLOY_HOST:-}" ]; then
-            echo "DEPLOY_HOST is empty. Set repository variable DEPLOY_HOST." >&2
+          if [ -z "${SSH_HOST:-}" ]; then
+            echo "SSH_HOST is empty." >&2
             exit 1
           fi
-          if [ -z "${DEPLOY_USER:-}" ]; then
-            echo "DEPLOY_USER is empty. Set repository variable DEPLOY_USER." >&2
+          if [ -z "${SSH_USER:-}" ]; then
+            echo "SSH_USER is empty." >&2
             exit 1
           fi
-          echo "DEPLOY_HOST=$DEPLOY_HOST"
-          echo "DEPLOY_USER=$DEPLOY_USER"
-          echo "DEPLOY_PORT=$DEPLOY_PORT"
+          echo "SSH_HOST=$SSH_HOST"
+          echo "SSH_USER=$SSH_USER"
+          echo "SSH_PORT=$SSH_PORT"
 
       - name: Setup SSH
         run: |
           install -m 700 -d ~/.ssh
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
-          ssh-keyscan -p "$DEPLOY_PORT" "$DEPLOY_HOST" > ~/.ssh/known_hosts
+          ssh-keyscan -p "$SSH_PORT" "$SSH_HOST" > ~/.ssh/known_hosts
           chmod 644 ~/.ssh/known_hosts
 
       - name: SSH smoke test
         run: |
-          ssh -p "$DEPLOY_PORT" -o StrictHostKeyChecking=yes "$DEPLOY_USER@$DEPLOY_HOST" "echo 'SSH OK'"
+          ssh -p "$SSH_PORT" -o StrictHostKeyChecking=yes "$SSH_USER@$SSH_HOST" "echo 'SSH OK'"
 
       - name: Ensure target dir exists
         run: |
-          ssh -p "$DEPLOY_PORT" -o StrictHostKeyChecking=yes "$DEPLOY_USER@$DEPLOY_HOST" <<'EOF'
+          ssh -p "$SSH_PORT" -o StrictHostKeyChecking=yes "$SSH_USER@$SSH_HOST" <<'EOF'
           set -e
           sudo mkdir -p /opt/growerhub/java-backend
           sudo chown -R "$(id -un):$(id -gn)" /opt/growerhub/java-backend
@@ -104,12 +104,12 @@ jobs:
           rsync -azv --delete \
             --exclude ".gradle/" --exclude "build/" --exclude ".idea/" --exclude "out/" \
             --omit-dir-times --no-perms --no-owner --no-group \
-            -e "ssh -p $DEPLOY_PORT -o StrictHostKeyChecking=yes" \
-            ./backend/ "$DEPLOY_USER@$DEPLOY_HOST:$DEPLOY_DIR/"
+            -e "ssh -p $SSH_PORT -o StrictHostKeyChecking=yes" \
+            ./backend/ "$SSH_USER@$SSH_HOST:$DEPLOY_DIR/"
 
       - name: Remote build + restart container
         run: |
-          ssh -p "$DEPLOY_PORT" "$DEPLOY_USER@$DEPLOY_HOST" <<'EOF'
+          ssh -p "$SSH_PORT" "$SSH_USER@$SSH_HOST" <<'EOF'
           set -e
           docker build -t growerhub-backend:local /opt/growerhub/java-backend
           docker rm -f growerhub-java-backend || true
