--- a/backend/gradle.properties
+++ b/backend/gradle.properties
@@ -2,3 +2,4 @@ org.gradle.java.home=C:\\Program Files\\Microsoft\\jdk-21.0.9.10-hotspot
 org.gradle.vfs.watch=false
 org.gradle.java.installations.auto-detect=false
 org.gradle.java.installations.paths=C:\\Program Files\\Microsoft\\jdk-21.0.9.10-hotspot
+systemProp.spring.profiles.active=test
