--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
@@ -34,6 +35,31 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+def bomStrippedMainDir = layout.buildDirectory.dir("bom-stripped/main")
+def bomStrippedTestDir = layout.buildDirectory.dir("bom-stripped/test")
+
+tasks.register('stripBomMain', Copy) {
+    from 'src/main/java'
+    into bomStrippedMainDir
+    filter { line -> line.replace('\uFEFF', '') }
+}
+
+tasks.register('stripBomTest', Copy) {
+    from 'src/test/java'
+    into bomStrippedTestDir
+    filter { line -> line.replace('\uFEFF', '') }
+}
+
+tasks.named('compileJava') {
+    dependsOn tasks.named('stripBomMain')
+    source = fileTree(bomStrippedMainDir)
+}
+
+tasks.named('compileTestJava') {
+    dependsOn tasks.named('stripBomTest')
+    source = fileTree(bomStrippedTestDir)
 }
 
 bootJar {
