feat(ci-cd): add MQTT environment variable checks in CI/CD workflow and Ansible tasks

--- a/.github/workflows/ci-cd-backend.yml
+++ b/.github/workflows/ci-cd-backend.yml
@@ -130,6 +130,22 @@ jobs:
             echo "SPRING_DATASOURCE_PASSWORD is missing or empty in $ENV_FILE" >&2
             exit 1
           fi
+          if grep -Eq '^MQTT_HOST=.+$' "$ENV_FILE"; then
+            if ! grep -Eq '^MQTT_PORT=.+$' "$ENV_FILE"; then
+              echo "MQTT_PORT is missing or empty in $ENV_FILE (MQTT_HOST is set)" >&2
+              exit 1
+            fi
+            if grep -Eq '^MQTT_USERNAME=' "$ENV_FILE" || grep -Eq '^MQTT_PASSWORD=' "$ENV_FILE"; then
+              if ! grep -Eq '^MQTT_USERNAME=.+$' "$ENV_FILE"; then
+                echo "MQTT_USERNAME is missing or empty in $ENV_FILE (MQTT auth enabled)" >&2
+                exit 1
+              fi
+              if ! grep -Eq '^MQTT_PASSWORD=.+$' "$ENV_FILE"; then
+                echo "MQTT_PASSWORD is missing or empty in $ENV_FILE (MQTT auth enabled)" >&2
+                exit 1
+              fi
+            fi
+          fi
           docker build -t growerhub-backend:local /opt/growerhub/java-backend
           docker rm -f growerhub-java-backend || true
           docker run -d --name growerhub-java-backend --restart unless-stopped \
@@ -137,6 +153,22 @@ jobs:
             -p 127.0.0.1:18080:8080 \
             growerhub-backend:local
           docker ps --filter name=growerhub-java-backend
+          if ! docker inspect growerhub-java-backend \
+            --format '{{range .Config.Env}}{{println .}}{{end}}' \
+            | grep -q '^SECRET_KEY='; then
+            echo "SECRET_KEY is not present in container env" >&2
+            exit 1
+          fi
+          if ! docker inspect growerhub-java-backend \
+            --format '{{range .Config.Env}}{{println .}}{{end}}' \
+            | grep -q '^SPRING_DATASOURCE_URL='; then
+            echo "SPRING_DATASOURCE_URL is not present in container env" >&2
+            exit 1
+          fi
+          docker inspect growerhub-java-backend \
+            --format '{{range .Config.Env}}{{println .}}{{end}}' \
+            | sed -E 's/=(.*)$/=***MASKED***/' \
+            | grep -E '^(SECRET_KEY|SPRING_DATASOURCE_URL)=' || true
 
           ok=0
           for i in $(seq 1 30); do
