Fix MQTT port assert

--- a/ansible/roles/java_backend/tasks/main.yml
+++ b/ansible/roles/java_backend/tasks/main.yml
@@ -65,7 +65,8 @@
 - name: Assert MQTT vars when MQTT is enabled
   ansible.builtin.assert:
     that:
-      - java_backend_mqtt_port | default("") | length > 0
+      - java_backend_mqtt_port is defined
+      - (java_backend_mqtt_port | int) > 0
       - (java_backend_mqtt_username | default("") | length == 0 and java_backend_mqtt_password | default("") | length == 0)
         or (java_backend_mqtt_username | default("") | length > 0 and java_backend_mqtt_password | default("") | length > 0)
     fail_msg: >-
