--- a/ansible/roles/nginx/handlers/main.yml
+++ b/ansible/roles/nginx/handlers/main.yml
@@ -9,3 +9,12 @@
     name: nginx
     state: reloaded
 
+- name: smoke-check api health
+  become: true
+  ansible.builtin.command: curl -fsS http://127.0.0.1/api/health
+  register: nginx_api_health
+  changed_when: false
+  retries: 5
+  delay: 2
+  until: nginx_api_health.rc == 0
+
