--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,2 @@
-*.md   text eol=lf
-*.yml  text eol=lf
-*.yaml text eol=lf
-*.json text eol=lf
-*.py   text eol=lf
-*.js   text eol=lf
-*.ts   text eol=lf
+# Use LF everywhere
+* text=auto eol=lf
