Add v2 src2/test2 scaffold and logging

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -2,15 +2,16 @@
 
 [platformio]
 src_dir = src
+test_dir = .
 
-[env:esp32dev]
+[env:esp32dev_legacy]
 platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
 
 # Unit-testy dlya etogo env propuskayem (zapuskayutsya v native wifi_service_test)
-test_ignore = test_system_clock_basic, test_wifi_service_basic
+test_ignore = test/test_system_clock_basic, test/test_wifi_service_basic
 
 ; Библиотеки
 lib_deps =
@@ -30,7 +31,27 @@ build_flags =
 ; Настройки загрузки
 upload_speed = 921600
 
-[env:wifi_service_test]
+[env:esp32dev]
+platform = espressif32
+board = esp32dev
+framework = arduino
+monitor_speed = 115200
+build_src_filter =
+    -<*>
+    +<../src2/>
+test_filter = test2/*
+lib_deps =
+    bblanchon/ArduinoJson@^6.21.3
+    adafruit/DHT sensor library@^1.4.4
+    adafruit/Adafruit Unified Sensor@^1.1.7
+    knolleary/PubSubClient@^2.8
+build_flags =
+    -Wno-unused-function
+    -Wno-unused-variable
+    -Isrc2
+upload_speed = 921600
+
+[env:wifi_service_test_legacy]
 platform = native
 platform_packages = toolchain-gccmingw32
 test_framework = unity
@@ -55,4 +76,21 @@ build_flags =
     -std=gnu++11
     -Isrc
     -Itest/fakes
-test_filter = test_wifi_service_basic, test_system_clock_basic, test_system_monitor_reboot, test_dht22_reboot_trigger
+test_filter = test/test_wifi_service_basic, test/test_system_clock_basic, test/test_system_monitor_reboot, test/test_dht22_reboot_trigger
+
+[env:test]
+platform = native
+platform_packages = toolchain-gccmingw32
+test_framework = unity
+extra_scripts =
+    scripts/setup_native_toolchain.py
+test_build_src = yes
+build_src_filter =
+    -<*>
+    +<../src2/>
+test_filter = test2/*
+build_flags =
+    -DUNIT_TEST
+    -std=gnu++11
+    -Isrc2
+    -Itest2
