Harden legacy/v2 test separation in PlatformIO

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -11,7 +11,7 @@ framework = arduino
 monitor_speed = 115200
 
 # Unit-testy dlya etogo env propuskayem (zapuskayutsya v native wifi_service_test)
-test_ignore = test/test_system_clock_basic, test/test_wifi_service_basic
+test_ignore = test/test_system_clock_basic, test/test_wifi_service_basic, test2/*
 
 ; Библиотеки
 lib_deps =
@@ -40,6 +40,7 @@ build_src_filter =
     -<*>
     +<../src2/>
 test_filter = test2/*
+test_ignore = test/*
 lib_deps =
     bblanchon/ArduinoJson@^6.21.3
     adafruit/DHT sensor library@^1.4.4
@@ -77,6 +78,7 @@ build_flags =
     -Isrc
     -Itest/fakes
 test_filter = test/test_wifi_service_basic, test/test_system_clock_basic, test/test_system_monitor_reboot, test/test_dht22_reboot_trigger
+test_ignore = test2/*
 
 [env:test]
 platform = native
@@ -89,6 +91,7 @@ build_src_filter =
     -<*>
     +<../src2/>
 test_filter = test2/*
+test_ignore = test/*
 build_flags =
     -DUNIT_TEST
     -std=gnu++11
