chore(nginx): add timed logs and tls keepalive

--- a/ansible/roles/nginx/files/etc/nginx/nginx.conf
+++ b/ansible/roles/nginx/files/etc/nginx/nginx.conf
@@ -17,7 +17,10 @@ http {
 
 	sendfile on;
 	tcp_nopush on;
+	tcp_nodelay on;
 	types_hash_max_size 2048;
+	keepalive_timeout 65;
+	keepalive_requests 1000;
 	# server_tokens off;
 
 	# server_names_hash_bucket_size 64;
@@ -30,13 +33,19 @@ http {
 	# SSL Settings
 	##
 
-	ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3; # Dropping SSLv3, ref: POODLE
+	ssl_protocols TLSv1.2 TLSv1.3;
 	ssl_prefer_server_ciphers on;
+	ssl_session_cache shared:SSL:50m;
+	ssl_session_timeout 1d;
+	ssl_stapling on;
+	ssl_stapling_verify on;
+	resolver 1.1.1.1 8.8.8.8 valid=300s;
 
 	##
 	# Logging Settings
 	##
 
+	log_format timed '$remote_addr "$request" $status $body_bytes_sent $request_time $upstream_response_time $ssl_protocol $ssl_cipher';
 	access_log /var/log/nginx/access.log;
 
 	##
