--- a/ansible/roles/nginx/files/etc/nginx/nginx.conf
+++ b/ansible/roles/nginx/files/etc/nginx/nginx.conf
@@ -45,6 +45,7 @@ http {
 	# Logging Settings
 	##
 
+	log_format timed '$remote_addr "$request" $status $body_bytes_sent $request_time $upstream_response_time $ssl_protocol $ssl_cipher';
 	access_log /var/log/nginx/access.log;
 
 	##
