refactor(mqtt): enhance MQTT diagnostics and logging; add RTC warmup logic

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -50,6 +50,8 @@ build_flags =
     -Wno-unused-function
     -Wno-unused-variable
     -Isrc2
+    -DMQTT_MAX_PACKET_SIZE=1024
+    -DDEBUG_MQTT_DIAG
 upload_speed = 921600
 
 [env:wifi_service_test_legacy]
