Add git-based firmware version define

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -36,6 +36,8 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
+extra_scripts =
+    scripts/pio_fw_version.py
 build_src_filter =
     -<*>
     +<../src2/>
@@ -88,6 +90,7 @@ platform_packages = toolchain-gccmingw32
 test_framework = unity
 extra_scripts =
     scripts/setup_native_toolchain.py
+    scripts/pio_fw_version.py
 test_build_src = yes
 build_src_filter =
     -<*>
