- Advisor: dobavlen domen advisor dlya rekomendacij poliva s keshom i LLM gateway. - Plant history: dobavlena bucket-istorija po metrikam dlya 2h shagov. - Journal: dobavlen read metod poslednego poliva dlya rastenija. - API: PlantResponse rasshiren watering_previous i watering_advice. - DB: migraciya dlya advisor_watering_advice. - Testy: dobavleny proverki kesh/perevalidaciya i bucketed history. - Dashboard: dobavlen znachok "pora polit" s tooltip. - Watering: defolty berutsya iz poslednego poliva, pokazany rekomendacii LLM.

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -59,6 +59,23 @@ server:
   # Public base URL.
   publicBaseUrl: "https://growerhub.ru"
 
+advisor:
+  # Priznak vklyucheniya advisor.
+  enabled: false
+  watering:
+    # TTL rekomendacii poliva.
+    ttl: "24h"
+  llm:
+    deepseek:
+      # Base URL dlya LLM.
+      baseUrl: "https://api.deepseek.com/v1/chat/completions"
+      # API key dlya LLM.
+      apiKey: ""
+      # Model LLM.
+      model: "deepseek-chat"
+      # Timeout zaprosa (sek).
+      requestTimeoutSeconds: 15
+
 plant:
   history:
     # Maksimal'noe kolichestvo tochek.
