feat: add esp32c3_supermini support and update hardware profile structure

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -27,6 +27,11 @@ build_flags =
     -DDEBUG_MQTT_DIAG
 upload_speed = 921600
 
+[env:esp32c3_supermini]
+extends = env:esp32dev
+board = esp32-c3-devkitm-1 ; TODO: zamenit na nuzhnyi board id esli otlichaetsya
+build_flags = ${env:esp32dev.build_flags} -DGH_HW_PROFILE_ESP32C3_SUPERMINI
+
 [env:test]
 platform = native
 platform_packages = toolchain-gccmingw32
