feat: add initial configuration files and enhance Wi-Fi service state management

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -31,6 +31,8 @@ upload_speed = 921600
 extends = env:esp32dev
 board = esp32-c3-devkitm-1 ; TODO: zamenit na nuzhnyi board id esli otlichaetsya
 build_flags = ${env:esp32dev.build_flags} -DGH_HW_PROFILE_ESP32C3_SUPERMINI
+board_build.partitions = partitions/esp32c3_littlefs_4mb.csv
+board_build.filesystem = littlefs
 
 [env:test]
 platform = native
