feat: add support for ESP32-C3 Supermini and enhance initialization logging

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -29,8 +29,10 @@ upload_speed = 921600
 
 [env:esp32c3_supermini]
 extends = env:esp32dev
-board = esp32-c3-devkitm-1 ; TODO: zamenit na nuzhnyi board id esli otlichaetsya
-build_flags = ${env:esp32dev.build_flags} -DGH_HW_PROFILE_ESP32C3_SUPERMINI
+board = esp32-c3-devkitm-1 
+
+build_flags = -DCORE_DEBUG_LEVEL=3 -DARDUINO_USB_CDC_ON_BOOT=1 -DARDUINO_USB_MODE=1 -DGH_HW_PROFILE_ESP32C3_SUPERMINI ;${env:esp32dev.build_flags}
+;build_flags = ${env:esp32dev.build_flags} -DGH_HW_PROFILE_ESP32C3_SUPERMINI
 board_build.partitions = partitions/esp32c3_littlefs_4mb.csv
 board_build.filesystem = littlefs
 
